@@ -23,12 +23,14 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
+import java.util.Objects;
 import java.util.SortedMap;
 import java.util.jar.JarFile;
 import java.util.jar.JarInputStream;
 import java.util.jar.JarOutputStream;
 
 import org.apache.commons.compress.harmony.archive.internal.nls.Messages;
+import org.apache.commons.io.input.BoundedInputStream;
 
 /**
  * Class factory for {@link Pack200.Packer} and {@link Pack200.Unpacker}.
@@ -36,240 +38,224 @@ import org.apache.commons.compress.harmony.archive.internal.nls.Messages;
 public abstract class Pack200 {
 
     /**
-     * The interface defining the API for converting a JAR file to an output
-     * stream in the Pack200 format.
+     * The interface defining the API for converting a JAR file to an output stream in the Pack200 format.
      */
     public interface Packer {
 
         /**
-         * the format of a class attribute name.
+         * The format of a class attribute name.
          */
         String CLASS_ATTRIBUTE_PFX = "pack.class.attribute."; //$NON-NLS-1$
 
         /**
-         * the format of a code attribute name.
+         * The format of a code attribute name.
          */
         String CODE_ATTRIBUTE_PFX = "pack.code.attribute."; //$NON-NLS-1$
 
         /**
-         * the deflation hint to set in the output archive.
+         * The deflation hint to set in the output archive.
          */
-        String DEFLATE_HINT = "pack.deflate.hint";//$NON-NLS-1$
+        String DEFLATE_HINT = "pack.deflate.hint"; //$NON-NLS-1$
 
         /**
-         * the indicated amount of effort to use in compressing the archive.
+         * The indicated amount of effort to use in compressing the archive.
          */
-        String EFFORT = "pack.effort";//$NON-NLS-1$
+        String EFFORT = "pack.effort"; //$NON-NLS-1$
 
         /**
          * a String representation for {@code error}.
          */
-        String ERROR = "error";//$NON-NLS-1$
+        String ERROR = "error"; //$NON-NLS-1$
 
         /**
          * a String representation of {@code false}.
          */
-        String FALSE = "false";//$NON-NLS-1$
+        String FALSE = "false"; //$NON-NLS-1$
 
         /**
-         * the format of a field attribute name.
+         * The format of a field attribute name.
          */
-        String FIELD_ATTRIBUTE_PFX = "pack.field.attribute.";//$NON-NLS-1$
+        String FIELD_ATTRIBUTE_PFX = "pack.field.attribute."; //$NON-NLS-1$
 
         /**
-         * a String representation for {@code keep}.
+         * The String representation for {@code keep}.
          */
-        String KEEP = "keep";//$NON-NLS-1$
+        String KEEP = "keep"; //$NON-NLS-1$
 
         /**
-         * decide if all elements shall transmit in their original order.
+         * Decide if all elements shall transmit in their original order.
          */
-        String KEEP_FILE_ORDER = "pack.keep.file.order";//$NON-NLS-1$
+        String KEEP_FILE_ORDER = "pack.keep.file.order"; //$NON-NLS-1$
 
         /**
-         * a String representation for {@code latest}.
+         * The String representation for {@code latest}.
          */
-        String LATEST = "latest";//$NON-NLS-1$
+        String LATEST = "latest"; //$NON-NLS-1$
 
         /**
-         * the format of a method attribute name.
+         * The format of a method attribute name.
          */
-        String METHOD_ATTRIBUTE_PFX = "pack.method.attribute.";//$NON-NLS-1$
+        String METHOD_ATTRIBUTE_PFX = "pack.method.attribute."; //$NON-NLS-1$
 
         /**
-         * if it shall attempt to determine the latest modification time if this
-         * is set to {@code LATEST}.
+         * If it shall attempt to determine the latest modification time if this is set to {@code LATEST}.
          */
-        String MODIFICATION_TIME = "pack.modification.time";//$NON-NLS-1$
+        String MODIFICATION_TIME = "pack.modification.time"; //$NON-NLS-1$
 
         /**
-         * a String representation of {@code pass}.
+         * The String representation of {@code pass}.
          */
-        String PASS = "pass";//$NON-NLS-1$
+        String PASS = "pass"; //$NON-NLS-1$
 
         /**
-         * the file that will not be compressed.
+         * The file that will not be compressed.
          */
-        String PASS_FILE_PFX = "pack.pass.file.";//$NON-NLS-1$
+        String PASS_FILE_PFX = "pack.pass.file."; //$NON-NLS-1$
 
         /**
-         * packer progress as a percentage.
+         * Packer progress as a percentage.
          */
-        String PROGRESS = "pack.progress";//$NON-NLS-1$
+        String PROGRESS = "pack.progress"; //$NON-NLS-1$
 
         /**
          * The number of bytes of each archive segment.
          */
-        String SEGMENT_LIMIT = "pack.segment.limit";//$NON-NLS-1$
+        String SEGMENT_LIMIT = "pack.segment.limit"; //$NON-NLS-1$
 
         /**
-         * a String representation of {@code strip}.
+         * The String representation of {@code strip}.
          */
-        String STRIP = "strip";//$NON-NLS-1$
+        String STRIP = "strip"; //$NON-NLS-1$
 
         /**
-         * a String representation of {@code true}.
+         * The String representation of {@code true}.
          */
-        String TRUE = "true";//$NON-NLS-1$
+        String TRUE = "true"; //$NON-NLS-1$
 
         /**
-         * the action to take if an unknown attribute is encountered.
+         * The action to take if an unknown attribute is encountered.
          */
-        String UNKNOWN_ATTRIBUTE = "pack.unknown.attribute";//$NON-NLS-1$
+        String UNKNOWN_ATTRIBUTE = "pack.unknown.attribute"; //$NON-NLS-1$
 
         /**
-         * add a listener for PropertyChange events
+         * Adds a listener for PropertyChange events
          *
-         * @param listener
-         *            the listener to listen if PropertyChange events occurs
+         * @param listener the listener to listen if PropertyChange events occurs
          */
         void addPropertyChangeListener(PropertyChangeListener listener);
 
         /**
-         * Pack the specified JAR file to the specified output stream.
+         * Packs the specified JAR file to the specified output stream.
          *
-         * @param in
-         *            JAR file to be compressed.
-         * @param out
-         *            stream of compressed data.
-         * @throws IOException
-         *             if I/O exception occurs.
+         * @param in  JAR file to be compressed.
+         * @param out stream of compressed data.
+         * @throws IOException if I/O exception occurs.
          */
         void pack(JarFile in, OutputStream out) throws IOException;
 
         /**
-         * Pack the data from the specified jar input stream to the specified
-         * output stream.
+         * Packs the data from the specified jar input stream to the specified output stream.
          *
-         * @param in
-         *            stream of uncompressed JAR data.
-         * @param out
-         *            stream of compressed data.
-         * @throws IOException
-         *             if I/O exception occurs.
+         * @param in  stream of uncompressed JAR data.
+         * @param out stream of compressed data.
+         * @throws IOException if I/O exception occurs.
          */
         void pack(JarInputStream in, OutputStream out) throws IOException;
 
         /**
-         * Returns a sorted map of the properties of this packer.
+         * Gets a sorted map of the properties of this packer.
          *
          * @return the properties of the packer.
          */
         SortedMap<String, String> properties();
 
         /**
-         * remove a listener
+         * Removes a listener
          *
-         * @param listener
-         *            listener to remove
+         * @param listener listener to remove
          */
         void removePropertyChangeListener(PropertyChangeListener listener);
     }
 
     /**
-     * The interface defining the API for converting a packed stream in the
-     * Pack200 format to a JAR file.
+     * The interface defining the API for converting a packed stream in the Pack200 format to a JAR file.
      */
     public interface Unpacker {
 
         /**
-         * The String indicating if the unpacker should ignore all transmitted
-         * values,can be replaced by either {@code true} or {@code false}.
+         * The String indicating if the unpacker should ignore all transmitted values, can be replaced by either {@code true} or {@code false}.
          */
-        String DEFLATE_HINT = "unpack.deflate.hint";//$NON-NLS-1$
+        String DEFLATE_HINT = "unpack.deflate.hint"; //$NON-NLS-1$
 
         /**
          * a String representation of {@code false}.
          */
-        String FALSE = "false";//$NON-NLS-1$
+        String FALSE = "false"; //$NON-NLS-1$
 
         /**
          * a String representation of {@code keep}.
          */
-        String KEEP = "keep";//$NON-NLS-1$
+        String KEEP = "keep"; //$NON-NLS-1$
 
         /**
-         * the progress as a {@code percentage}.
+         * The progress as a {@code percentage}.
          */
-        String PROGRESS = "unpack.progress";//$NON-NLS-1$
+        String PROGRESS = "unpack.progress"; //$NON-NLS-1$
 
         /**
          * a String representation of {@code true}.
          */
-        String TRUE = "true";//$NON-NLS-1$
+        String TRUE = "true"; //$NON-NLS-1$
 
         /**
-         * add a listener for {@code PropertyChange} events.
+         * Adds a listener for {@code PropertyChange} events.
          *
-         * @param listener
-         *            the listener to listen if {@code PropertyChange} events
-         *            occurs.
+         * @param listener the listener to listen if {@code PropertyChange} events occurs.
          */
         void addPropertyChangeListener(PropertyChangeListener listener);
 
         /**
-         * Returns a sorted map of the properties of this unpacker.
+         * Gets a sorted map of the properties of this unpacker.
          *
          * @return the properties of unpacker.
          */
         SortedMap<String, String> properties();
 
         /**
-         * remove a listener.
+         * Removes a listener.
          *
-         * @param listener
-         *            listener to remove.
+         * @param listener listener to remove.
          */
         void removePropertyChangeListener(PropertyChangeListener listener);
 
         /**
-         * Unpack the contents of the specified {@code File} to the specified
-         * JAR output stream.
+         * Unpacks the contents of the specified {@code File} to the specified JAR output stream.
          *
-         * @param in
-         *            file to be uncompressed.
-         * @param out
-         *            JAR output stream of uncompressed data.
-         * @throws IOException
-         *             if I/O exception occurs.
+         * @param in  file to uncompress.
+         * @param out JAR output stream of uncompressed data.
+         * @throws IOException if I/O exception occurs.
          */
         void unpack(File in, JarOutputStream out) throws IOException;
 
         /**
-         * Unpack the specified stream to the specified JAR output stream.
+         * Unpacks the specified stream to the specified JAR output stream.
          *
-         * @param in
-         *            stream to uncompressed.
-         * @param out
-         *            JAR output stream of uncompressed data.
-         * @throws IOException
-         *             if I/O exception occurs.
+         * @param in  stream to uncompress, preferably a {@link BoundedInputStream}.
+         * @param out JAR output stream of uncompressed data.
+         * @throws IOException if I/O exception occurs.
          */
         void unpack(InputStream in, JarOutputStream out) throws IOException;
+
     }
 
+    /**
+     * System property key.
+     */
     private static final String SYSTEM_PROPERTY_PACKER = "java.util.jar.Pack200.Packer"; //$NON-NLS-1$
 
+    /**
+     * System property key.
+     */
     private static final String SYSTEM_PROPERTY_UNPACKER = "java.util.jar.Pack200.Unpacker"; //$NON-NLS-1$
 
     static Object newInstance(final String systemProperty, final String defaultClassName) {
@@ -277,7 +263,11 @@ public abstract class Pack200 {
             final String className = System.getProperty(systemProperty, defaultClassName);
             try {
                 // TODO Not sure if this will cause problems loading the class
-                return Pack200.class.getClassLoader().loadClass(className).newInstance();
+                ClassLoader classLoader = Pack200.class.getClassLoader();
+                if (classLoader == null) {
+                    classLoader = Objects.requireNonNull(ClassLoader.getSystemClassLoader(), "ClassLoader.getSystemClassLoader()");
+                }
+                return classLoader.loadClass(className).getConstructor().newInstance();
             } catch (final Exception e) {
                 throw new Error(Messages.getString("archive.3E", className), e); //$NON-NLS-1$
             }
@@ -287,10 +277,9 @@ public abstract class Pack200 {
     /**
      * Returns a new instance of a packer engine.
      * <p>
-     * The implementation of the packer engine is defined by the system property
-     * {@code 'java.util.jar.Pack200.Packer'}. If this system property is
-     * defined an instance of the specified class is returned, otherwise the
-     * system's default implementation is returned.
+     * The implementation of the packer engine is defined by the system property {@code 'java.util.jar.Pack200.Packer'}. If this system property is defined an
+     * instance of the specified class is returned, otherwise the system's default implementation is returned.
+     * </p>
      *
      * @return an instance of {@code Packer}
      */
@@ -299,21 +288,20 @@ public abstract class Pack200 {
     }
 
     /**
-     * Returns a new instance of a unpacker engine.
+     * Returns a new instance of an unpacker engine.
      * <p>
-     * The implementation of the unpacker engine is defined by the system
-     * property {@code 'java.util.jar.Pack200.Unpacker'}. If this system
-     * property is defined an instance of the specified class is returned,
-     * otherwise the system's default implementation is returned.
+     * The implementation of the unpacker engine is defined by the system property {@link Pack200.Unpacker}. If this system property is defined an instance of
+     * the specified class is returned, otherwise the system's default implementation is returned.
+     * </p>
      *
-     * @return a instance of {@code Unpacker}.
+     * @return an instance of {@link Pack200.Unpacker}.
      */
     public static Pack200.Unpacker newUnpacker() {
         return (Unpacker) newInstance(SYSTEM_PROPERTY_UNPACKER, "org.apache.commons.compress.harmony.unpack200.Pack200UnpackerAdapter"); //$NON-NLS-1$
     }
 
     /**
-     * Prevent this class from being instantiated.
+     * Prevents this class from being instantiated.
      */
     private Pack200() {
         // do nothing
